--- a/index.scss
+++ b/index.scss
@@ -61,6 +61,10 @@ $line-space: 22px;
     margin-bottom: $line-space;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   hr {
     border-top: 1px solid #ddd;
     border-bottom: none;
@@ -98,6 +102,7 @@ $line-space: 22px;
   }
 
   a {
+    text-decoration: none;
     color: #0269c8;
     border-bottom: 1px solid #d1e9ff;
     &:hover,
