--- a/juejin.scss
+++ b/juejin.scss
@@ -79,6 +79,7 @@ $line-space: 22px;
     position: relative;
     line-height: 1.75;
     > code {
+      font-size: 12px;
       padding: 15px 12px;
       margin: 0;
       word-break: normal;
