fix: pre>code color

--- a/juejin.scss
+++ b/juejin.scss
@@ -85,6 +85,7 @@ $line-space: 22px;
       word-break: normal;
       display: block;
       overflow-x: auto;
+      color: #333;
       background: #f8f8f8;
     }
   }
