--- a/juejin.scss
+++ b/juejin.scss
@@ -5,7 +5,7 @@ $line-space: 22px;
   word-break: break-word;
   line-height: 1.75;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 16px;
   overflow-x: hidden;
   color: #333;
 
@@ -20,24 +20,21 @@ $line-space: 22px;
     margin-bottom: 10px;
     padding-bottom: 5px;
   }
+
   h1 {
-    font-size: 30px;
+    font-size: 24px;
     margin-bottom: 5px;
+  }
+  h2, h3, h4, h5, h6 {
+    font-size: 20px;
   }
   h2 {
     padding-bottom: 12px;
-    font-size: 24px;
     border-bottom: 1px solid #ececec;
   }
   h3 {
     font-size: 18px;
     padding-bottom: 0;
-  }
-  h4 {
-    font-size: 16px;
-  }
-  h5 {
-    font-size: 15px;
   }
   h6 {
     margin-top: 5px;
